feat(agent)!: 完善可恢复执行链路、创作交互与前端工程结构
- 将 Agent Context、Creation revision、toolCallId 与待处理输入状态持久化到 Java 权威数据
- 升级需求确认协议，支持 PENDING、SUBMITTED、SKIPPED、CANCELLED 完整状态流转
- 在表单暂停事务中原子保存 Context、表单和 Creation 状态，提交或跳过后精确替换原 Tool Result 并恢复 Pi Loop
- 校验 Tool Call、Tool Result、表单定义与待处理输入的一致性，防止答案绑定到错误请求
- 将表单答案作为不受信任用户数据注入上下文，避免重复询问及提示词注入
- 精简 Agent Worker Ledger，只保留 Java 确认前的暂停投递与最终 Completion 重放数据
- 完善取消语义，使等待输入中的表单、Context 和 Creation 在同一事务中进入取消状态
- 增加 V30 数据库迁移及 Java/TS 动态 JSON、快照和消息契约测试
- 接入可选 Langfuse/OpenTelemetry Agent 追踪，记录模型调用、Tool 生命周期、Token 用量和执行结果
- 对追踪数据过滤图片二进制、Thinking 与签名字段，并保证观测异常不会影响业务执行
- 强化文生图和图生图数量约束、授权校验、错误映射及用户语言提示词规则
- 优化人像捏脸 Skill、系统提示词和工具使用约束

- 完善 Agent 实时文字、Skill、Tool、表单及图片进度展示
- 使用权威 Generation Task 聚合图片进度，避免重复展示多个生图完成步骤
- 增加运行状态旋转图标、技能图标与简化后的创作过程样式
- 支持表单确认、跳过和取消整次创作，并持久化展示最终处理结果
- 优化 SSE Context 分层和状态记忆，减少文字流式更新引起的无关组件重渲染
- 修复会话切换状态残留、资产详情状态不同步、认证弹窗状态残留及协议加载重试问题
- 增加会话标题十字符截断、输入框滚动收缩、自动跟随底部和返回底部交互

- 统一灵感页、资产页和个人主页的图片详情组件与导航行为
- 增加详情返回键、前后作品切换、提示词独立滚动及响应式移动端布局
- 完善公开作品点赞、下载、撤销发布和乐观更新失败回滚
- 将资产列表扩展为桌面端六列响应式布局
- 修复个人主页作品详情打开、签名 URL 刷新及公开图片下载问题
- 更新作者信息、发布时间、AI 生成标识和操作菜单布局

- 按 app、widgets、features、entities、shared 重新整理前端职责边界
- 提取 AppProviders、灵感流 Widget、用户协议 Feature 和共享工具
- 增加 ESLint 分层依赖约束，阻止 shared、entities 和 features 反向依赖
- 启用 noUncheckedIndexedAccess，收紧 SSE、表单和数组访问类型校验
- 引入 Prettier、EditorConfig、format/typecheck 脚本及前端环境变量示例
- 补充 Agent、表单、可观测性、图片详情、点赞、认证和状态隔离测试
- 更新项目 README、架构说明、模块文档、UI 规范和产品展示截图

BREAKING CHANGE: Agent 表单暂停请求升级为 contractVersion 2，
Execution Snapshot 改用 pendingInput 恢复语义；部署时必须先执行 V30 数据库迁移，
并同步发布 Java Core 与 TypeScript Agent Worker。